--- a/Pipfile
+++ b/Pipfile
@@ -1,19 +1,19 @@
 [[source]]
-
-url = "https://pypi.python.org/simple"
+url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
-
 [packages]
-
-
+beautifulsoup4 = "*"
+pytest = "*"
+responses = "*"
+requests = "*"
+tox = "*"
+ipython = "*"
+isort = "*"
+pdbpp = "*"
 
 [dev-packages]
 
-"e1839a8" = {path = ".", extras = ["develop"], editable = true}
-
-
 [requires]
-
-python_version = "3.6"
+python_version = "3.10"
