--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ skip_missing_interpreters = true
 envlist =
     cov-clean,
     check,
-    py{34,35,36},
+    py{34,35,36,310},
     cov-report,
     build-docs
 
@@ -17,6 +17,7 @@ basepython =
     py34: {env:TOXPYTHON:python3.4}
     py35: {env:TOXPYTHON:python3.5}
     py36: {env:TOXPYTHON:python3.6}
+    py310: {env:TOXPYTHON:python3.10}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
