Manage packages with pipenv independent of python version
The project was inherited with an incomplete migration to Pipenv. To
enable the project to easily be used across python versions, the
dependencies are unversioned and included in the Pipfile. The
Pipfile.lock is also removed for cross python version compatibility.

--- a/Pipfile
+++ b/Pipfile
@@ -5,15 +5,17 @@ name = "pypi"
 
 [packages]
 beautifulsoup4 = "*"
-pytest = "*"
-responses = "*"
 requests = "*"
+
+[dev-packages]
+bumpversion = "*"
+responses = "*"
+pytest = "*"
 tox = "*"
 ipython = "*"
 isort = "*"
 pdbpp = "*"
-
-[dev-packages]
+mal-scraper = {editable = true, path = "."}
 
 [requires]
 python_version = "3.10"
